src/objects/OM_Group_Relationships__c.object
<CustomObject>
    <description>Junction object for relating Accounts to Buying/Contracting Groups</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Account__c</fullName>
        <description>For relating a GPO and Account together</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buying/Contracting Groups</relationshipLabel>
        <relationshipName>GPO_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OM_GPO_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPO Power of One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_GPO_Ranking__c</fullName>
        <description>Number field to rank the GPOs related to an account.</description>
        <inlineHelpText>Enter number equivalent to ranking. (e.g. Primary = 1, Secondary = 2)</inlineHelpText>
        <label>GPO Ranking</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Group__c</fullName>
        <description>For relating GPO to Account</description>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OM_Buying_Contracting_Groups__c.OM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OM_Buying_Contracting_Groups__c</referenceTo>
        <relationshipLabel>Member Accounts</relationshipLabel>
        <relationshipName>GPO_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Group Relationship</label>
    <nameField>
        <displayFormat>BCG-{000000}</displayFormat>
        <label>Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GPO_Ranking</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OM_Account__r.OM_GPO_Ranking__c  &gt;=  1 ,  ISPICKVAL(OM_GPO_Ranking__c,&apos;Primary&apos;))</errorConditionFormula>
        <errorMessage>Account already has a primary relationship.</errorMessage>
    </validationRules>
</CustomObject>